--- a/styles/Body.module.css
+++ b/styles/Body.module.css
@@ -119,6 +119,7 @@
     display: flex;
     flex-direction: column;
     gap: 25px;
+    color: white;
 }
 
 .main_form .forminput_div input{
@@ -128,7 +129,7 @@
     border-color: white;
     background-color: rgba(49, 48, 48, 0.2);
     color: white;
-    padding-left: 25px;
+    padding-left: 30px;
     font-size: 18px;
 }
 
@@ -152,7 +153,8 @@
 }
 
 .forminput_div .password_icon{
-    left:300px;
+    top:10px;
+    left:290px;
     cursor: pointer;
 }
 
@@ -164,6 +166,55 @@
     color: white;
 }
 
-.forminput_div input:focus{
-    
+
+.terms p{
+    font-size: 14px;
+    margin-top: -2px;
+}
+
+.terms p span{
+    color: rgb(255, 102, 0);
+    font-size: 15px;
+    cursor: pointer;
+}
+
+.sign{
+    display: flex;
+    gap:20px;
+}
+
+.sign .button1{
+    height:15px;
+    width:90px;
+    background-color: white;
+    padding: 10px;
+    color: black;
+    /* text-align: center; */
+    /* display: inline-block; */
+    /* vertical-align: middle; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    font-weight: 600;
+    margin-top: -10px;
+}
+.sign .button2{
+    height:12px;
+    width:100px;
+    background-color: white;
+    padding: 10px;
+    color: black;
+}
+
+
+.sign  .middle{
+     display: flex;
+     flex-direction: column;
+     margin-top: -22px;
+}
+
+.middle .middle_OR{
+    padding-left: 10px;
+    color:rgb(100, 97, 97);
 }
