--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,5 +1,5 @@
 .nav{
-    background-color: rgb(19, 18, 18);
+    background-color: black;
     height: 120px;
     min-height: 70px;
     position: sticky;
