--- a/styles/Earnings.module.css
+++ b/styles/Earnings.module.css
@@ -25,7 +25,6 @@
     gap: 10px;
     max-width: 100vw;
     overflow-x: scroll; 
-    
 }
 
 .btn_user{
@@ -139,3 +138,11 @@
     background-color: rgb(255, 102, 0);
     border-radius: 100px;
 }
+
+ /* Hover element */
+ .hover_btn{
+    height:120px;
+    width: 80px;
+    background-color: grey;
+
+ }
