--- a/styles/Body.module.css
+++ b/styles/Body.module.css
@@ -1,6 +1,11 @@
+.body_div{
+    padding-inline: 14rem;
+    width:100%;
+}
+
+/* First Div Section */
 .main_div{
     display: flex;
-    padding-inline: 14rem;
     gap:10px;
     background-color: rgb(19, 18, 18);
 }
@@ -45,6 +50,7 @@
     border-radius: 10px;
     color: white;
     box-sizing: border-box;
+    font-weight: 700;
     width: 10px;
     height: 10px;  
     padding: 10px;
@@ -141,13 +147,16 @@
 .forminput_div input:placeholder-shown ~ .inner_input{
     top:8px;
     left:30px;
+    color: white;
 }
 
 .main_form .forminput_div .inner_input{
     position:absolute;
     top:-25px;
-    left:30px;
+    left:12px;
     z-index: -1;
+    color:rgb(255, 102, 0);
+    
 }
  
 .forminput_div input:focus ~ .inner_input{
@@ -175,13 +184,6 @@
     left:20rem;
     cursor: pointer;
 }
-
-/* .forminput_div span{
-    position:absolute;
-    top:8px;
-    left:30px;
-    color: white;
-} */
 
 .forminput_div .error_div{
     color: red;
@@ -224,7 +226,6 @@
     align-items: center;
     border-radius: 10px;
     font-weight: 600;
-    /* margin-top: ; */
     cursor:pointer;
 }
 
@@ -253,3 +254,116 @@
     padding-left: 10px;
     color:rgb(100, 97, 97);
 }
+
+/* Second Div Section */
+.second_div{
+    height:150px;
+    width:90%;
+    display:flex;
+    background-color: #1c1c1c;
+    /* margin-right: 20px; */
+    margin-top: 5rem;
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden; 
+}
+
+.second_div .text_div{
+    width:40%;
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(255,102,0,1) 0%, rgba(46,27,3,1) 76%);
+    color:white;
+    padding:10px 20px;
+    z-index:10;
+}
+
+.second_div .text_div > p{
+    opacity: 0.8;
+}
+
+.second_div .text_div::before{
+    background-color:#1c1c1c;
+    content:"";
+    height:250px;
+    position:absolute;
+    left:500px;
+    top:-10px;
+    transform:rotate(-65deg);
+    width:200px;
+    z-index:0;
+}
+
+.second_div .logo_div{
+    padding: 10px 20px;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-gap: 70px;
+    z-index: 10;
+}
+
+.logo_div .logo1{
+    margin-top: 30px;
+    height: 70px;
+    width: 180px;
+    background-color: aqua;
+    flex-grow: 1;
+    display: flex;
+    flex-shrink: 0;
+    border-radius:14px;
+}
+
+.logo_div .logo1 img{
+    margin-top: 10px;
+    padding-top: 0px;
+    margin-left: 30px;
+    height:50px;
+    width:110px;
+    text-align: center;    
+}
+
+.logo_div .logo2{
+    margin-top: 30px;
+    height: 70px;
+    width: 180px;
+    background-color: white;
+    border-radius:14px;
+    flex-grow: 1;
+    display: flex;
+    flex-shrink: 0;
+}
+
+.logo_div .logo2 img{
+    height:60px;
+    width:120px;
+    margin-top: 10px;
+    padding-top: 0px;
+    margin-left: 30px;
+    text-align: center;
+}
+
+.logo_div .logo3{
+    margin-top: 30px;
+    height: 70px;
+    width: 180px;
+    background-color: #08224f;
+    border-radius:14px;
+    flex-grow: 1;
+    display: flex;
+    flex-shrink: 0;
+}
+
+.logo_div .logo3 img{
+    height:60px;
+    width:120px;
+    margin-top: 5px;
+    padding-top: 0px;
+    margin-left: 30px;
+    text-align: center;
+}
+
+/* Third Div Section */
+
+ /* Heading Section */
+
+ .third_div .distance{
+    margin-top: 3rem;
+ }
