--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -2,9 +2,13 @@
     background-color: black;
     height: 120px;
     min-height: 70px;
-    position: sticky;
+   
     z-index: 10;
+    max-width: 100vw;
+}
 
+.hello{
+    background-color: white;
 }
 
 .main{
