--- a/components/Body/HeadingSection/style.module.css
+++ b/components/Body/HeadingSection/style.module.css
@@ -4,16 +4,16 @@
     flex-direction: column;
     gap:0px;
     text-align: center;
+    /* margin-left: -10rem; */
  }
  
- .text h1{
+ .text p:first-child{
     font-size: 45px;
-    color:white;
-    opacity:0.8; 
+    color:white; 
     margin-bottom: 3px;
  }
  
- .text p{
+ .text p:last-child{
     color:grey;
     margin-top: -1px;
     font-size: 20px;
