--- a/styles/Body.module.css
+++ b/styles/Body.module.css
@@ -1,8 +1,15 @@
+.container{
+    height: 100%;
+    width:100%;
+    background-color: rgb(19, 18, 18);
+}
+
 .body_div{
     padding-top: 4rem;
     padding-bottom: 4rem;
     max-width: 80rem;
     margin: auto;
+    background-color: rgb(19, 18, 18);
 }
 
 /* First Div Section */
@@ -11,7 +18,6 @@
     justify-content: space-between;
     background-color: rgb(19, 18, 18);
 }
-
 
 .main_div .section_part{
     display:flex;
@@ -380,6 +386,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
 
 }
 
@@ -388,4 +395,26 @@
     width:2px;
     background-color: grey;
     text-align: center;
+}
+
+.third_div .backcolor1{
+    position:absolute;
+    height:200px;
+    width:200px;
+    border-radius: 36% 64% 27% 73% / 45% 28% 72% 55% ;
+    background: rgb(255, 102, 0);
+    top:100rem;
+    left:-5rem;
+    filter:blur(80px);
+}
+
+.third_div .backcolor2{
+    position: absolute;
+    height:200px;
+    width:200px;
+    border-radius: 76% 24% 66% 34% / 42% 64% 36% 58%   ;
+    background: rgb(255, 102, 0);
+    top:80rem;
+    right:-5rem;
+    filter:blur(80px);
 }
