Upto Footer is Done

--- a/components/Footer/style.module.css
+++ b/components/Footer/style.module.css
@@ -1,62 +1,72 @@
-.footer{
-    height:100%;
-    width:100%;
+.container{
+    width: 100%;
+    height: 100%;
     background-color: rgb(19, 18, 18);
-    padding: 4rem 0px;
 }
 
-.footer .main{
-    max-width:80rem;
+.main{
+    max-width: 80rem;
     margin:auto;
-    color:white
+    color: white;
 }
 
-.footer .review{
-    padding-top: 4rem;
+.main .line{
+    height:2px;
+    width:100%;
+    background-color: grey;
+}
+
+.main .links{
+    padding-top: 20px;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+}
+
+.links .left_div{
     display: flex;
+    gap:16px;
 }
 
-.main .review .review1 p:first-child{
+.left_div div:last-child{
+    display: flex;
+    flex-direction: column;
+    gap:8px;
+    cursor: pointer;
+}
+
+.left_div > div a:first-child{
     font-size: 25px;
-    margin-left: 2rem;
+    font-weight: 600;
 }
 
-.main .review .review1 span >  img{
-    height:2rem;
-    width: 10rem;
+.left_div > div a:first-child:hover{
+    color:rgb(228, 91, 0)
 }
 
-.review .review1 p:last-child{
-    font-size: 15px;
+.left_div > div a:last-child{
+    font-size:13px;
+    opacity: 0.7;
 }
 
-.review .review1 p:nth-child(3) > a{
-    text-decoration: underline;
+.links .left_div > span img{ 
+    height: 4rem;
+    border-radius: 15px;
 }
 
-.review .review1 div:last-child img{
-    height:2rem;
-    width: 9rem;
+.first{
+    display: flex;
+    flex-direction: column;
+    gap:8px;
 }
 
-.review .review2{
-    position:absolute;
-    max-width: max-content;
-    
+.title{
+    font-size: 20px;
+    font-weight: 600
 }
 
-.review .left_arrow{
-    height:2rem;
-    width:2rem;
-    position: absolute;
-    top:5rem;
-    left:12rem;
-}
-
-.review2 p{
-    position: absolute;
-    display:inline-flex;
-    color:grey;
-    top:10rem;
-    left:20rem;
+.first > div > .icon_text{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap:10px;
 }
