--- a/styles/Body.module.css
+++ b/styles/Body.module.css
@@ -426,8 +426,8 @@
 
 /* FAQ Section */
 .faq_section{
-    width:100%;
-    height:100%;
+    /* width:100%; */
+    /* height:100%; */
     background-color: rgb(0, 0, 0,0.9);
 }
 
@@ -436,4 +436,20 @@
     padding-bottom: 6rem;
     max-width: 80rem;
     margin: auto;
+}
+
+/* Review Section */
+.review_section{
+    background-color: rgb(19, 18, 18);
+}
+
+.review_section .review{
+    padding-bottom: 6rem;
+    max-width: 80rem;
+    margin: auto;
+}
+
+.footer_section{
+    background-color: rgb(19, 18, 18);
+    padding-bottom: 4rem;
 }
