--- a/styles/Body.module.css
+++ b/styles/Body.module.css
@@ -449,7 +449,7 @@
     margin: auto;
 }
 
-.footer_section{
+/* .footer_section{
     background-color: rgb(19, 18, 18);
     padding-bottom: 4rem;
-}
+} */
