--- a/components/Footer/style.module.css
+++ b/components/Footer/style.module.css
@@ -54,8 +54,9 @@
     opacity: 0.7;
 }
 
-.links .left_div > span img{ 
+.links .left_div img{ 
     height: 4rem;
+    width: 4rem;
     border-radius: 15px;
 }
 
